fix problems from block.properties changes

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -222,6 +222,7 @@ screen.CHORUS_COL=Chorus Flower
 screen.CONDUIT_COL=Conduit
 screen.COPPER_COL=Copper Ore
 screen.CRYING_COL=Crying Obsidian
+screen.TNT_COL=Ancient Debris
 screen.DIAMOND_COL=Diamond Ore
 screen.DRAGON_COL=Dragon Egg
 screen.EMERALD_COL=Emerald Ore
