--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -1113,6 +1113,10 @@ value.BLOCKLIGHT_RESOLUTION.3=0.33
 value.BLOCKLIGHT_RESOLUTION.4=0.25
 value.BLOCKLIGHT_RESOLUTION.6=0.17
 value.BLOCKLIGHT_RESOLUTION.8=0.13
+
+option.BLOCKLIGHT_HIGHLIGHT=Specular Blocklight Highlights
+option.BLOCKLIGHT_HIGHLIGHT.comment=Makes light from blocklight sources reflect from surfaces in a way that accounts for their smoothness.
+
 option.VOXEL_RT_REFLECTIONS=World-Space Reflections
 option.VOXEL_RT_REFLECTIONS.comment=Allows things that aren't visible on the screen to be reflected by other things. §e[*]§r High performance impact.
 
