--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -8,6 +8,7 @@ profile.MEDIUM=§aMedium
 profile.HIGH=§eHigh (Default)
 profile.VERYHIGH=§cVery High
 profile.ULTRA=§4§lUltra
+profile.COMPLEMENTARY=§4§l§n§oComplementary
 profile.comment=Shader profiles change performance settings with the most optimised visual fidelity to performance ratio. §e[*]§r It's recommended to use one of these profiles for your settings unless you know what you are doing. §e[*]§r All affected settings can all be found in the "Performance Settings" or the "Rethinking Voxels Settings" menu.
 
 #Information
@@ -156,10 +157,14 @@ screen.MOON_PHASE_INF_SETTINGS.comment=Settings to determine how different moon 
 screen.ACL_FEATURES_SETTINGS=ACL Exclusive Features §e[*]§r
 screen.ACL_FEATURES_SETTINGS.comment=Settings that are about features exclusive to Advanced Colored Lighting. §e[*]§r These features only work if Advanced Colored Lighting is enabled in Performance Settings and your system supports it.
 
+screen.PIXELATED_LIGHTING_SETTINGS=Pixelated Lighting
+screen.PIXELATED_LIGHTING_SETTINGS.comment=Settings to make certain lighting effects pixelated.
+
 screen.WATER_SETTINGS=Water
 screen.WATER_SETTINGS.comment=Settings that are about water.
 
 screen.WATER_COLOR_SETTINGS=Water Surface Color
+
 screen.UNDERWATER_COLOR_SETTINGS=Underwater Color
 
 screen.WATER_WAVE_SETTINGS=Waving Water Normals §e[*]§r
@@ -259,7 +264,8 @@ screen.TABLE_COL=Enchanting Table
 screen.TNT_COL=TNT
 screen.TORCH_COL=Torch
 screen.YELLOWFROG_COL=Ochre Froglight
-
+screen.DEBRIS_COL=Ancient Debris
+screen.RESIN_COL=Resin Lights
 
 #Settings
 option.RP_MODE=RP Support
@@ -302,7 +308,7 @@ value.LIGHTSHAFT_QUALI_DEFINE.3=§cHigh
 value.LIGHTSHAFT_QUALI_DEFINE.4=§4§lVery High
 
 option.shadowDistance=Shadow Distance
-option.shadowDistance.comment=Adjusts the distance from the player which real-time shadows are rendered. §e[*]§r The value is internally capped at Render Distance. §c[-]§r Lower values may cause excessive Light Shaft leaking.
+option.shadowDistance.comment=Adjusts the distance from the player which real-time shadows are rendered. §e[*]§r The value is internally capped at Render Distance. §e[*]§r It's recommended to set this value to about 80% of your render distance for best performance and coverage. §c[-]§r Lower values may cause excessive Light Shaft leaking.
 value.shadowDistance.64.0=§a4 Chunks §c[-]
 value.shadowDistance.80.0=§a5 Chunks §c[-]
 value.shadowDistance.96.0=§a6 Chunks §c[-]
@@ -315,7 +321,7 @@ value.shadowDistance.256.0=§c16 Chunks
 value.shadowDistance.320.0=§c20 Chunks
 value.shadowDistance.384.0=§4§l24 Chunks
 value.shadowDistance.512.0=§4§l32 Chunks
-value.shadowDistance.768.0=§4§k-§r§4§l§n§o48 Chunks§r§4§k-
+value.shadowDistance.768.0=§4§l§n§o48 Chunks
 value.shadowDistance.1024.0=§4§k-§r§4§l§n§o64 Chunks§r§4§k-
 
 option.ENTITY_SHADOWS_DEFINE=Entity Shadows
@@ -390,6 +396,9 @@ value.LIGHTSHAFT_BEHAVIOUR.3=Extreme §c[-]
 
 option.LIGHTSHAFT_SMOKE=Light Shaft Smoke
 option.LIGHTSHAFT_SMOKE.comment=Adds volumetric smoke to the light shafts. §c[-]§r This effect can impact performance.
+
+option.SPECIAL_PALE_GARDEN_LIGHTSHAFTS=Special Pale Garden Shafts
+option.SPECIAL_PALE_GARDEN_LIGHTSHAFTS.comment=Makes light shafts look extra spicy in the "Pale Garden" biome.
 
 option.LIGHTSHAFT_DAY_I=Light Shaft Day Multiplier
 option.LIGHTSHAFT_NIGHT_I=Light Shaft Night Multiplier
@@ -632,14 +641,24 @@ value.SHADOW_SMOOTHING.3=Smooth
 value.SHADOW_SMOOTHING.2=Sharp §c[-]
 value.SHADOW_SMOOTHING.1=Very Sharp §c[-]
 
-option.PIXEL_SHADOW=Pixelated Shadows
-option.PIXEL_SHADOW.comment=Modifies the world coordinates on a grid to make shadows pixelated. §e[*]§r This setting does not affect performance.
-value.PIXEL_SHADOW.0=OFF
-value.PIXEL_SHADOW.8=8x8 §e[*]
-value.PIXEL_SHADOW.16=16x16 §e[*]
-value.PIXEL_SHADOW.32=32x32 §e[*]
-value.PIXEL_SHADOW.64=64x64 §e[*]
-value.PIXEL_SHADOW.128=128x128 §e[*]
+option.PIXELATED_SHADOWS=Pixelated Shadows
+option.PIXELATED_SHADOWS.comment=Makes shadows cast from the sun and moon look pixelated.
+
+option.PIXELATED_BLOCKLIGHT=Pixelated Blocklight
+option.PIXELATED_BLOCKLIGHT.comment=Makes the lighting cast by light source blocks look pixelated.
+
+option.PIXELATED_AO=Pixelated Edge Shadows
+option.PIXELATED_AO.comment=Makes Minecraft's vanilla ambient occlusion look pixelated.
+
+option.PIXEL_SCALE=Pixelation Scale
+option.PIXEL_SCALE.comment=Scaling done on the textures resolution.
+value.PIXEL_SCALE.-2=0.25x
+value.PIXEL_SCALE.-1=0.5x
+value.PIXEL_SCALE.1=1x
+value.PIXEL_SCALE.2=2x
+value.PIXEL_SCALE.3=4x
+value.PIXEL_SCALE.4=8x
+value.PIXEL_SCALE.5=16x
 
 option.BLOOM=Bloom
 option.BLOOM.comment=Enables blurry glow from bright objects and humidity.
@@ -974,6 +993,9 @@ option.WORLD_OUTLINE_THICKNESS.comment=Determines the thickness of the World Out
 option.WORLD_OUTLINE_I=World Outline Brightness
 option.WORLD_OUTLINE_I.comment=Determines how intense the World Outline effect will be.
 
+option.WORLD_OUTLINE_ON_ENTITIES=World Outline on Entities
+option.WORLD_OUTLINE_ON_ENTITIES.comment=Determines if the World Outline effect will apply to entities or not. §c[-]§r This setting may not work perfectly with some custom PBR resource packs.
+
 option.DARK_OUTLINE=Dark Outline
 option.DARK_OUTLINE.comment=Adds dark outlines around blocks. §c[-]§r This effect can impact performance.
 
@@ -1161,10 +1183,13 @@ option.SLANTED_BLOCK_EDGES=Slanted Block Edges
 option.SLANTED_BLOCK_EDGES.comment=Tilts face normals of full blocks outwards if at their edges if there is no block next to them.
 
 option.INTERACTIVE_WATER=Interactive Water Waves
-option.INTERACTIVE_WATER.comment=Allows players and entities that are crossing a water surface to produce waves on that surface.
+option.INTERACTIVE_WATER.comment=Allows players and entities that are crossing a water surface to produce waves on that surface. Only works with Unbound water waves.
 
 option.WATER_BUMP_INTERACTIVE=Interactive Water Bumpiness
 option.WATER_BUMP_INTERACTIVE.comment=Controls the wave strength of interactive water waves.
+
+option.DIRECTION_UPDATING_CONETRACE=Update Cone direction during RT
+option.DIRECTION_UPDATING_CONETRACE.comment=Allows lights to cast light onto surfaces from which only their edges are visible. [§c-§r] Very performance intensive.
 
 option.CONWAY=End Game of Life
 option.CONWAY.comment=Simulates Conway's game of life at the bottom of the end. Cells that are close to the player revive.
@@ -1179,6 +1204,12 @@ value.FRACTAL_GALAXY.2=Partial Mandelbrot Set
 value.FRACTAL_GALAXY.3=Julia Set
 option.PER_PIXEL_LIGHT=Per-Pixel Light Calculation
 option.PER_PIXEL_LIGHT.comment=If this is enabled, Light from Block Light sources will be calculated separately for each pixel on the screen. Otherwise, it will be calculated only once per block.
+
+option.R2_FALLOFF=Light Falloff
+option.R2_FALLOFF.comment=Controls the steepness at which the brightness of a light source changes with distance. 1/r^2 is physically correct.
+value.R2_FALLOFF.0=1/r
+value.R2_FALLOFF.1=1/r^2
+
 
 option.VOLUMETRIC_BLOCKLIGHT=Vol. Blocklight
 option.VBL_STRENGTH=Vol. Blocklight Strength
@@ -1278,6 +1309,9 @@ option.BRIGHTNESS_ALLAY=Allay Brightness
 option.BRIGHTNESS_TNT=TNT Brightness
 option.BRIGHTNESS_CRIMSON=Crimson Stem / Hyphae Brightness
 option.BRIGHTNESS_WARPED=Warped Stem / Hyphae Brightness
+option.BRIGHTNESS_DEBRIS=Ancient Debris Brightness
+option.HEART_BRIGHTNESS_RESIN=Creaking Heart Brightness
+option.BLOSSOM_BRIGHTNESS_RESIN=Eyeblossom Brightness
 
 option.CAULDRON_HARDCODED_LAVA_COL=Override Lava Cauldron Color
 option.HARDCODED_LAVA_COL=Override Lava Color
@@ -1340,6 +1374,9 @@ option.HARDCODED_BLAZE_COL=Override Blaze Color
 option.HARDCODED_SQUID_COL=Override Glow Squid Color
 option.HARDCODED_ALLAY_COL=Override Allay Color
 option.HARDCODED_TNT_COL=Override TNT Color
+option.HARDCODED_DEBRIS_COL=Override Ancient Debris Color
+option.HEART_HARDCODED_RESIN_COL=Override Creaking Heart Color
+option.BLOSSOM_HARDCODED_RESIN_COL=Override Eyeblossom Color
 
 
 option.LAVA_COL_R=Red
@@ -1483,3 +1520,9 @@ option.ALLAY_COL_B=Blue
 option.TNT_COL_R=Red
 option.TNT_COL_G=Green
 option.TNT_COL_B=Blue
+option.DEBRIS_COL_R=Red
+option.DEBRIS_COL_G=Green
+option.DEBRIS_COL_B=Blue
+option.RESIN_COL_R=Red
+option.RESIN_COL_G=Green
+option.RESIN_COL_B=Blue
